Issue #3856, support valign middle in td

--- a/css/refactor/principles-management.less
+++ b/css/refactor/principles-management.less
@@ -142,3 +142,7 @@ div.table table caption {
 div.chapter a.xref.target-figure:not(.labeled) {
   content: @FIGURE_NAME target-counter(attr(href), chapter) "." target-counter(attr(href), figure);
 }
+
+.td-valign-support() {
+  vertical-align: middle;
+}
