--- a/css/refactor/themes/business/parts/tables.less
+++ b/css/refactor/themes/business/parts/tables.less
@@ -2,6 +2,8 @@
  * Business Table Styles
  * ------------------------
  */
+ .td-valign-support() {}
+
 .chapter .table {
   //override content-skeleton, can be removed if we remove content-skeleton
   page-break-inside: auto;
@@ -92,6 +94,9 @@ div.table {
 
       &[valign=top] > tr > td {
         vertical-align: top;
+        &[valign=middle] {
+          .td-valign-support();
+        }
       }
 
       tr {
